Mon Nov 13 20:05:53 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* bseresamplerimpl.hh: Removed unnecessary delay. The stream delay for
	both, upsampling and downsampling should be truely minimal now.

	* bseresampler.hh: The guarantee that the upsampler delay is even was
	removed from the API. The reason is that we can have a shorter stream
	delay when the upsampler delay is odd.

	* bsedatahandle-resample.cc: Introduced additional delay compensation
	code, because compensating an odd upsampler delay wasn't necessary
	when this code was initially written.

Wed Nov  8 23:28:05 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* bseresampler.[hc]* bseresamplerimpl.hh: Added coefficient set for
	linear interpolation. It will probably sound bad, but its useful for
	testing.

Sun Nov  5 04:23:07 2006  Tim Janik  <timj@gtk.org>

	* tests/filtertest.cc (random_filter_tests): extended fixed orders to 32 
	and random orders to 64. cut the requested order for band filters in 
	half, because it's doubled upon design.

Sat Nov  4 20:09:33 2006  Tim Janik  <timj@gtk.org>

	* bsefilter-ellf.c: removed ellf-behavior special casing. switched
	to higher precision constants. substituted bsemath.h constants.

	* bsemath.h: provide ln(4), decibel10 and decibel20 factors.

Sat Nov  4 19:46:01 2006  Tim Janik  <timj@gtk.org>

	* bsefilter-ellf.c: replaced all ellf specific complex number 
	arithmetic by bse_complex*() calls.

	* bsemath.h: provide BSE_COMPLEX_ONE for convenience.

Sat Nov  4 18:14:08 2006  Tim Janik  <timj@gtk.org>

	* gslmathtest.c: removed, this has been ported to bsemathtest and
	is long unused.

Sat Nov  4 17:38:28 2006  Tim Janik  <timj@gtk.org>

	* bsemath.h: don't include neither of the C++ <complex> or the C99
	<complex.h> header files. removed compat typedefs. we'll simply resort
	to using BseComplex in headers and use <complex> in C++ files.

	* bsefilter.h: use BseComplex for complex numbers in header files.

	* bsefilter.cc: adaptions to BseComplex.
